app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-to-be-scaled
  namespace: predictive-scaler
spec:
  selector:
    app: service-to-be-scaled
  ports:
    - name: tcp
      port: 8080
      targetPort: 8080
